# fastapi-basic-application

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/routers/: echo.py  health.py
tests/: test_echo.py  test_health.py
